# ib-sec-mcp

./: .dockerignore  .env.example  .envrc  .gitignore  .gitleaks.toml  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  PROJECT_SUMMARY.md  README.md  available_analysis.md  docker-compose.yml  fastmcp.json  holding_costs.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  README.md  SLASH_COMMANDS.md  SUB_AGENTS.md  WORKFLOWS.md
.claude/agents/: api-debugger.md  code-implementer.md  code-reviewer.md  data-analyzer.md  issue-analyzer.md  market-analyst.md  performance-optimizer.md  portfolio-risk-analyst.md  strategy-coordinator.md  tax-optimizer.md  test-runner.md
.claude/commands/: add-analyzer.md  add-test.md  analyze-all.md  analyze-stock.md  analyze-symbol.md  benchmark.md  compare-periods.md  daily-check.md  debug-api.md  dividend-analysis.md  explain-architecture.md  fetch-latest.md  fx-exposure.md  investment-strategy.md  mcp-status.md  optimize-portfolio.md  options-strategy.md  quality-check.md  rebalance-portfolio.md  resolve-gh-issue.md  sector-analysis.md  tax-report.md  test.md  validate-data.md  wash-sale-check.md
.claude/hooks/: README.md  pre-tool-use.sh  session-start.sh
.claude/rules/: claude-extensions.md  financial-code.md  mcp-tools.md  testing.md
.claude/scripts/: README.md  validate_claude_config.py
.claude/templates/: error-handling.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: ci.yml  security.yml
docs/: architecture.md  calculation_error_prevention_strategy.md  calculators.md  csv-format.md  data-format.md  database-schema.md  docker.md  etf_calculator_usage_guide.md  mcp-tools-reference.md  phase1_completion_summary.md  scheduled-tasks.md  troubleshooting.md
examples/: sentiment_analysis_example.py
ib_sec_mcp/: __init__.py
ib_sec_mcp/analyzers/: __init__.py  base.py  bond.py  cost.py  fx.py  performance.py  risk.py  sector.py  tax.py
ib_sec_mcp/analyzers/sentiment/: __init__.py  base.py  composite.py  news.py  options.py  technical.py
ib_sec_mcp/api/: __init__.py  client.py  cp_client.py  cp_models.py  models.py
ib_sec_mcp/cli/: analyze.py  fetch.py  report.py  sync_positions.py
ib_sec_mcp/core/: __init__.py  aggregator.py  calculator.py  parsers.py
ib_sec_mcp/mcp/: __init__.py  exceptions.py  middleware.py  prompts.py  resources.py  server.py  tools.py  validators.py
ib_sec_mcp/mcp/tools/: __init__.py  composable_data.py  daily_monitor.py  earnings_calendar.py  etf_calculator_tools.py  etf_comparison.py  ib_portfolio.py  limit_orders.py  live_trading.py  market_comparison.py  options.py  order_management.py  portfolio_analytics.py  position_history.py  rebalancing.py  sector_fx.py  sentiment_analysis.py  stock_data.py  stock_news.py  technical_analysis.py
ib_sec_mcp/models/: __init__.py  account.py  portfolio.py  position.py  trade.py
ib_sec_mcp/reports/: __init__.py  base.py  console.py
ib_sec_mcp/storage/: __init__.py  database.py  limit_order_store.py  migrations.py  order_sync.py  position_store.py
ib_sec_mcp/tools/: etf_calculator.py
ib_sec_mcp/utils/: __init__.py  config.py  logger.py  validators.py
legacy/: analyze_performance.py  analyze_trades.py  bond_analysis.py  comprehensive_summary_report.py  find_similar_bonds.py  interest_rate_scenario_analysis.py  monthly_performance_analysis.py  phantom_income_tax_analysis.py  trading_cost_analysis.py  voo_trading_analysis.py
scripts/: example_usage.py
tests/: __init__.py
tests/analyzers/: test_bond.py  test_cost.py  test_fx.py  test_performance.py  test_risk.py  test_sector.py  test_tax.py
tests/analyzers/sentiment/: __init__.py  conftest.py  test_base.py  test_composite.py  test_news.py
tests/api/: test_client.py  test_cp_client.py  test_cp_models.py
tests/cli/: test_sync_positions.py
tests/core/: test_aggregator.py  test_calculator.py  test_parsers.py
tests/integration/: __init__.py  conftest.py  test_cp_connection.py  test_cp_live_orders.py  test_cp_order_flow.py  test_cp_order_sync.py
tests/mcp/: _fastmcp_helpers.py  test_analyze_dividend_income.py  test_daily_monitor.py  test_ib_portfolio.py  test_limit_orders.py  test_live_trading.py  test_order_management.py  test_rebalancing.py  test_resources_rebalancing.py  test_sector_fx.py  test_server.py  test_validators.py
tests/models/: test_account.py  test_portfolio.py  test_position.py  test_trade.py
tests/storage/: test_database.py  test_limit_order_store.py  test_order_sync.py  test_position_store.py
tests/unit/: test_earnings_calendar.py
